1.3.1.1

- Its now possible to use a different filename than ScreenRes.txt via the registry-key "Software\B2S\B2SScreenResFileNameOverride"


1.3.1.0

- The FormToFront setting now also works correctly when having the StartBackground setting turned on

- The background and backglass are in sync independent of how FormToFront is set (background should not hide backglass)

- Lines starting with "#" is ignored when reading the ScreenRes.txt or TableName.res files. Now possible to do like this: (template file is updated accordingly)

   # Playfield Screen resolution width/height
   800
   600
   # Backglass Screen resolution width/height
   800
   600
   ...
 
- StartBackground can now also be set globally in the B2STableSettings.xml (but there is no GUI available). When set globally, the GUI will only save StartBackground on table level when they differ.
 
  <B2STableSettings>
     ...
     <StartBackground>1</StartBackground>
     <afm_113>
        <StartBackground>0</StartBackground>
        ...
     </afm_113>
  </B2STableSettings>
 
- Let the 3rd Screen (formDMD) also be controlled by the FormToFront setting


1.3.0.6

- Add ROMName call, and adapt ChangedLEDs API change


1.3.0.4

- Change default to not show startup errors.

- Merge David Pavia's change to optionally set backglass to not on-top and make "fuzzy match" a setting (default: current behavior) to match functionality in David Pavia's PUP version.

- Fix bug with more than 400 lights causing an index out of range exception reported by Wildman.

- Sync up some of the differences in the EXE/non EXE versions of the settings class.


1.3.0.3

- Bug fix: Alternate tablename.res (replacing screenres.txt) failed for Server running as EXE

- Bug fix/feature: support alternative ways to find direct2BS based on gamename

- Feature: proportional aspect ratio for backglass as option per table

- add some more missing VPinMAME interface properties (NVRAM & SoundMode and more for the exe version)
